--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,12 @@ info:
   name: ${spring.application.name}
   description: ${project.description}
   version: ${project.version}
+
+eureka:
+  enableSelfPreservation: true
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+  server:
+    waitTimeInMsWhenSyncEmpty: 0
+    instanceEnabledOnit: true
