--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
     </dependencies>
 
     <build>
-        <finalName>${appName}</finalName>
+        <finalName>${appName}.${version}.${build}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
