--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
     </dependencies>
 
     <build>
-        <finalName>${appName}.${version}.${build}</finalName>
+        <finalName>${appName}.${project.version}.${build}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -114,6 +114,9 @@
                 <version>0.3.2</version>
                 <configuration>
                     <imageName>micro/${project.artifactId}</imageName>
+                    <imageTags>
+                        <imageTag>${project.version}.${build}</imageTag>
+                    </imageTags>
                     <dockerDirectory>target/classes</dockerDirectory>
                     <resources>
                         <resource>
