--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,14 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <sonar.projectVersion>${buildVersion}</sonar.projectVersion>
+                </configuration>
+            </plugin>
         </plugins>
         <resources>
             <resource>
